Salesforce Training org/objects/HTTPCalloutConfiguration__mdt.object
<CustomObject>
    <description>This metadata will store the information about all the API callouts that are being used.</description>
    <fields>
        <fullName>Body__c</fullName>
        <description>Request Body</description>
        <inlineHelpText>Request Body</inlineHelpText>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CertificateName__c</fullName>
        <description>Certificate name for API callout</description>
        <inlineHelpText>Certificate name for API callout</inlineHelpText>
        <label>CertificateName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>Endpoint URL of API</description>
        <inlineHelpText>Endpoint URL of API</inlineHelpText>
        <label>Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HeaderParameters__c</fullName>
        <description>Header Parameters stored as key-value pairs</description>
        <inlineHelpText>Use the below format to store header parameters:-

key1:value1
key2:value2
key3:value3</inlineHelpText>
        <label>HeaderParameters</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsCompressed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the request body is delivered to the endpoint in the gzip compressed format</description>
        <inlineHelpText>If checked, the request body is delivered to the endpoint in the gzip compressed format</inlineHelpText>
        <label>IsCompressed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>HTTP Method used for callout</description>
        <inlineHelpText>HTTP Method used for callout</inlineHelpText>
        <label>Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GET</fullName>
                    <default>true</default>
                    <label>GET</label>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
                <value>
                    <fullName>PATCH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <defaultValue>120000</defaultValue>
        <description>Request Timeout for the API Callout</description>
        <inlineHelpText>Request Timeout for the API Callout</inlineHelpText>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URLParameters__c</fullName>
        <description>URL Parameters stored as key-value pairs</description>
        <inlineHelpText>Use the below format to store URL parameters:-

key1:value1
key2:value2
key3:value3</inlineHelpText>
        <label>URLParameters</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>HTTPCalloutConfiguration</label>
    <pluralLabel>HTTPCalloutConfigurations</pluralLabel>
    <validationRules>
        <fullName>TimeoutLimit</fullName>
        <active>true</active>
        <description>Request timeout cannot be greater than 120000</description>
        <errorConditionFormula>Timeout__c &gt; 120000</errorConditionFormula>
        <errorMessage>Maximum timeout you can specify is 120000</errorMessage>
    </validationRules>
</CustomObject>